lox-tests/tests/number/leading_dot.stderr
ERROR: at '.': Expected expression, got Dot
 --> 2:1
  |
2 | .123;
  | ^
